# lqbz_public

./: .gitignore  README.md
OS/: swap_space.md
OS/Cache friendly code/: cpu缓存友好代码.md  更多缓存友好代码示例.md
OS/Cache friendly code/more/: CMakeLists.txt  DESIGN.md  README.md  build.sh  测试结果.md
OS/Cache friendly code/more/include/: cache_aware_btree.hpp  cache_aware_hash.hpp  cache_aware_list.hpp  cache_aware_string.hpp
OS/Cache friendly code/more/tests/: hash_test.cpp  list_test.cpp  string_test.cpp  tree_test.cpp
OS/Cache friendly code/tests/: CMakeLists.txt  data_structure_test.cpp  false_sharing_test.cpp  matrix_multiply_test.cpp  memory_access_test.cpp  numa_affinity_test.cpp  numa_allocation_test.cpp  numa_latency_test.cpp  测试结果.md
OS/内存映射/: build.sh  example.cpp  lru_cache.cpp  readme.md  reamd.md
OS/零拷贝/: CMakeLists.txt  build.sh  readme.md
OS/零拷贝/docs/: zero_copy_queues.md
OS/零拷贝/include/: mmap_queue.hpp  queue_base.hpp  sendfile_queue.hpp  splice_queue.hpp
OS/零拷贝/src/: mmap_queue.cpp  sendfile_queue.cpp  splice_queue.cpp
bagu/docker&k8s/: Kubernetes 中生成 Endpoints 的几种方式.md  docker.md  k8s中的service有哪几种类型.md
bagu/network/: cubic.py  连接池复用链接.md
code_test/: README.md
code_test/3sum/: 3sum.cpp  3sum_extensions.cpp  build.sh  readme.md
code_test/LCA/: build.sh  extension.cpp  readme.md  test.cpp
code_test/LCS/: extensions.cpp  readme.md  test.cpp
code_test/LIS/: extensions.cpp  readme.md  test.cpp
code_test/add-strings/: extension.cpp  readme.md  test.cpp
code_test/atoi/: extensions.cpp  readme.md  test.cpp
code_test/binary-search/: build.sh  extension.cpp  readme.md  test.cpp
code_test/binary-tree-level-order-traversal/: binary_tree_level_order_traversal.cpp  binary_tree_level_order_traversal_extension.cpp  build.sh  readme.md
code_test/binary-tree-maximum-path-sum/: extensions.cpp  readme.md  test.cpp
code_test/buy-and-sell-stock/: build.sh  buy_and_sell_stock_extension.cpp  buy_and_sell_stock_test.cpp  readme.md
code_test/collect-water/: extension.cpp  readme.md  test.cpp
code_test/find-duplicates/: build.sh  find_duplicates_test.cpp  readme.md
code_test/implement-queue-using-stacks/: extensions.cpp  readme.md  test.cpp
code_test/intersection-of-two-linked-lists/: extensions.cpp  readme.md  test.cpp
code_test/islands/: build.sh  islands_extension.cpp  islands_test.cpp  readme.md
code_test/largest-number/: build.sh  largest_number_test.cpp  readme.md
code_test/linked-list-cycle/: extensions.cpp  readme.md  test.cpp
go_learn/: Dockerfile  README.md  build.sh  mulu.md  prompt.md  run.sh
hanhan_tool/: clear.sh  parse.py  xiaoshuo_reader.py
hot100/: 概述.md
prompts/: AI 编程助手规则与偏好.md  代码解释助手.md
utils/: build.sh  citizen.cpp
向量检索原理/: readme.md  特征提取与向量化.md  相似度度量方法.md  索引优化技术.md  索引方法构建.md  综述.md  计算优化.md
(+492 files in other folders)
